--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 orbs:
   macos: circleci/macos@2.0.1
   slack: circleci/slack@4.10.1
-  codecov: codecov/codecov@3.3.0
 
 version: 2.1
 
@@ -19,7 +18,7 @@ parameters:
 
 aliases:
   base-job: &base-job
-    resource_class: macos.x86.medium.gen2
+    resource_class: macos.m1.medium.gen1
     macos:
       xcode: << parameters.xcode_version >>
     parameters:
@@ -375,7 +374,6 @@ jobs:
 
   spm-revenuecat-ui-ios-15:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -400,7 +398,6 @@ jobs:
 
   spm-revenuecat-ui-ios-16:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -432,7 +429,6 @@ jobs:
 
   spm-revenuecat-ui-ios-17:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -483,7 +479,6 @@ jobs:
   
   run-test-macos:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -506,7 +501,6 @@ jobs:
           
   run-test-ios-17:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -541,8 +535,6 @@ jobs:
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 14 (16.4)
-      - codecov/upload:
-          xtra_args: "-v --xc --xp fastlane/test_output/xctest/ios/RevenueCat.xcresult --preventSymbolicLinks=true"
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: RevenueCat
@@ -558,6 +550,8 @@ jobs:
 
   run-test-ios-15:
     <<: *base-job
+    # Running on M1 makes these tests crash
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - install-dependencies
@@ -710,7 +704,6 @@ jobs:
 
   build-visionos:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -721,7 +714,6 @@ jobs:
 
   backend-integration-tests-SK1:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - run-backend-tests:
           test_plan: "BackendIntegrationTests-SK1"
