--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -352,6 +352,7 @@ jobs:
 
   spm-revenuecat-ui-ios-15:
     <<: *base-job
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -376,6 +377,7 @@ jobs:
 
   spm-revenuecat-ui-ios-16:
     <<: *base-job
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -407,6 +409,7 @@ jobs:
 
   spm-revenuecat-ui-ios-17:
     <<: *base-job
+    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
