--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -492,7 +492,7 @@ jobs:
           command: bundle exec fastlane test_ios skip_sk_tests:true
           no_output_timeout: 15m
           environment:
-            SCAN_DEVICE: macOS
+            SCAN_DEVICE: platform=macOS
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: RevenueCat
