--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -751,6 +751,9 @@ jobs:
       - install-bundle-dependencies
       - trust-github-key
       - run:
+          name: Pod repo update
+          command: bundle exec pod repo update
+      - run:
           name: Pod repo list
           command: bundle exec pod repo list
       - run:
