Don't run `backend-integration-tests-offline` on all PRs

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1127,10 +1127,8 @@ workflows:
                 ignore: /pull\/[0-9]+/
       - backend-integration-tests-offline:
           xcode_version: '14.3.0'
-          filters:
-              branches:
-                # Forked pull requests have CIRCLE_BRANCH set to pull/XXX
-                ignore: /pull\/[0-9]+/
+          # These tests are flaky due to FB13133387 so we don't want the noise in every PR
+          <<: *release-branches-and-main
       - backend-integration-tests-custom-entitlements:
           xcode_version: '14.3.0'
           filters:
