--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,8 @@
 orbs:
   macos: circleci/macos@2.0.1
   slack: circleci/slack@4.10.1
+  # Disabled until compatible with M1: codecov: codecov/codecov@3.3.0
+  # codecov: codecov/codecov@3.3.0
 
 version: 2.1
 
@@ -535,6 +537,9 @@ jobs:
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 14 (16.4)
+      # Disabled until it's compatible with M1: https://github.com/codecov/feedback/issues/51
+      # - codecov/upload:
+      #     xtra_args: "-v --xc --xp fastlane/test_output/xctest/ios/RevenueCat.xcresult --preventSymbolicLinks=true"
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: RevenueCat
