--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,8 @@
 orbs:
   macos: circleci/macos@2.0.1
   slack: circleci/slack@4.10.1
-  codecov: codecov/codecov@3.3.0
+  # Disabled until compatible with M1: codecov: codecov/codecov@3.3.0
+  # codecov: codecov/codecov@3.3.0
 
 version: 2.1
 
@@ -19,7 +20,7 @@ parameters:
 
 aliases:
   base-job: &base-job
-    resource_class: macos.x86.medium.gen2
+    resource_class: macos.m1.medium.gen1
     macos:
       xcode: << parameters.xcode_version >>
     parameters:
@@ -375,7 +376,6 @@ jobs:
 
   spm-revenuecat-ui-ios-15:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -400,7 +400,6 @@ jobs:
 
   spm-revenuecat-ui-ios-16:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -432,7 +431,6 @@ jobs:
 
   spm-revenuecat-ui-ios-17:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - update-spm-installation-commit
@@ -483,7 +481,6 @@ jobs:
   
   run-test-macos:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -506,7 +503,6 @@ jobs:
           
   run-test-ios-17:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -541,8 +537,9 @@ jobs:
           no_output_timeout: 5m
           environment:
             SCAN_DEVICE: iPhone 14 (16.4)
-      - codecov/upload:
-          xtra_args: "-v --xc --xp fastlane/test_output/xctest/ios/RevenueCat.xcresult --preventSymbolicLinks=true"
+      # Disabled until it's compatible with M1: https://github.com/codecov/feedback/issues/51
+      # - codecov/upload:
+      #     xtra_args: "-v --xc --xp fastlane/test_output/xctest/ios/RevenueCat.xcresult --preventSymbolicLinks=true"
       - compress_result_bundle:
           directory: fastlane/test_output/xctest/ios
           bundle_name: RevenueCat
@@ -558,6 +555,8 @@ jobs:
 
   run-test-ios-15:
     <<: *base-job
+    # Fix-me: running on M1 makes these tests crash
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - install-dependencies
@@ -646,6 +645,8 @@ jobs:
 
   run-test-ios-13:
     <<: *base-job
+    # M1 unsupported
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - install-dependencies
@@ -673,6 +674,8 @@ jobs:
 
   run-test-ios-12:
     <<: *base-job
+    # M1 unsupported
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - install-dependencies
@@ -710,7 +713,6 @@ jobs:
 
   build-visionos:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - checkout
       - install-dependencies
@@ -721,7 +723,6 @@ jobs:
 
   backend-integration-tests-SK1:
     <<: *base-job
-    resource_class: macos.m1.medium.gen1
     steps:
       - run-backend-tests:
           test_plan: "BackendIntegrationTests-SK1"
@@ -752,6 +753,8 @@ jobs:
 
   release-checks:
     <<: *base-job
+    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
@@ -791,6 +794,8 @@ jobs:
 
   make-release:
     <<: *base-job
+    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
+    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
