`XCFramework`: add `visionOS` build (#3583)
Fixes #3031. Depends on #3582.
See also
https://github.com/bielikb/fastlane-plugin-create_xcframework/pull/21

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -758,8 +758,6 @@ jobs:
 
   release-checks:
     <<: *base-job
-    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
-    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
@@ -800,8 +798,6 @@ jobs:
 
   make-release:
     <<: *base-job
-    # Fix-me: Carthage can't build fat frameworks on Apple Silicon. See https://github.com/RevenueCat/purchases-ios/pull/3582
-    resource_class: macos.x86.medium.gen2
     steps:
       - checkout
       - trust-github-key
@@ -1156,7 +1152,9 @@ workflows:
           xcode_version: '14.2.0'
           <<: *release-branches-and-main
       - build-tv-watch-and-macos:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
+      - release-checks:
+          xcode_version: '15.2'
       - build-visionos:
           xcode_version: '15.2'
       - backend-integration-tests-SK1:
@@ -1194,25 +1192,25 @@ workflows:
         equal: [ scheduled_pipeline, << pipeline.trigger_source >> ]
     jobs:
       - release-checks:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-cocoapods:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-swift-package-manager:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-custom-entitlement-computation-swift-package-manager:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-receipt-parser:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-carthage:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - installation-tests-xcode-direct-integration:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-branches
       - hold:
           type: approval
@@ -1230,7 +1228,7 @@ workflows:
             - hold
           <<: *release-branches
       - make-release:
-          xcode_version: '14.3.0'
+          xcode_version: '15.2'
           <<: *release-tags
       - push-revenuecat-pod:
           xcode_version: '15.2'
