--- a/fastlane/.env.SAMPLE
+++ b/fastlane/.env.SAMPLE
@@ -12,3 +12,6 @@ GITHUB_PULL_REQUEST_TEAM_REVIEWERS=
 
 # Optional for updating changelog. Can be the same as GITHUB_PULL_REQUEST_API_TOKEN and improves issues with github api rate limits.
 GITHUB_TOKEN=
+
+# Optional for triggering CircleCI pipelines using the CircleCI API
+CIRCLE_TOKEN=
