Try generic docker

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1010,7 +1010,8 @@ jobs:
           command: bundle exec fastlane automatic_bump github_rate_limit:10
 
   push-to-spm:
-    resource_class: macos.m1.medium.gen1
+    docker:
+      - image: cimg/base:stable
     steps:
       - checkout
       - revenuecat/setup-git-credentials
