Push to SPM after release has been made (#3834)
Previously the sync with SPM occurred before the release PR had been
merged. This PR should correct that.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -339,20 +339,6 @@ commands:
           path: fastlane/test_output/xctest
           destination: scan-test-output
 
-  push-to-spm:
-    steps:
-      - checkout
-      - setup-git-credentials
-      - run:
-          name: Clone purchases-ios and push to purchases-ios-spm
-          command: |
-            git clone https://github.com/RevenueCat/purchases-ios.git
-            cd purchases-ios
-            git fetch --tags
-            git remote set-url origin https://github.com/RevenueCat/purchases-ios-spm.git
-            git push origin
-            git push --tags
-
 jobs:
   spm-release-build-xcode-14:
     <<: *base-job
@@ -1021,7 +1007,6 @@ jobs:
       - run:
           name: Create automatic PR
           command: bundle exec fastlane automatic_bump github_rate_limit:10
-      - push-to-spm
 
   integration-tests-all:
     <<: *base-job
@@ -1120,6 +1105,23 @@ jobs:
                   }
                 ]
               }
+
+  deploy-to-spm:
+    docker:
+      - image: cimg/base:stable
+    resource_class: small
+    steps:
+      - checkout
+      - setup-git-credentials
+      - run:
+          name: Clone purchases-ios and push to purchases-ios-spm
+          command: |
+            git clone https://github.com/RevenueCat/purchases-ios.git
+            cd purchases-ios
+            git fetch --tags
+            git remote set-url origin https://github.com/RevenueCat/purchases-ios-spm.git
+            git push origin
+            git push --tags
 
 workflows:
   version: 2
@@ -1289,6 +1291,9 @@ workflows:
             - make-release
             - push-revenuecat-pod
           <<: *release-tags
+      - deploy-to-spm:
+         requires:
+            - make-release
       - docs-deploy:
           xcode_version: '14.3.0'
           <<: *release-tags
