--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,7 +154,7 @@ commands:
             equal: ["", << parameters.mint_version >>]
           steps:
             - install-brew-dependency:
-                dependency_name: 'mint'
+                dependency_name: 'swiftlint'
       - run: brew tap robotsandpencils/made
       - save_cache:
           key: homebrew-cache-{{ checksum "Brewfile.lock.json" }}-{{ arch }}
